--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <h3>Half n Half</h3>
                     </div>
                     <div class="game-thumbnail" data-game="match-animal">
-                        <img src="/placeholder.svg?height=150&width=150" alt="Match Animal">
+                        <img src="https://github.com/sanketrk08/auticare/blob/main/images/animal%20match%20logo.jpg?raw=true" alt="Match Animal">
                         <h3>Match Animal</h3>
                     </div>
                 </div>
