--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <h2>Fun Games</h2>
                 <div class="game-selection">
                     <div class="game-thumbnail" data-game="shadow">
-                        <img src="/placeholder.svg?height=150&width=150" alt="Where Is My Shadow">
+                        <img src="https://github.com/sanketrk08/auticare/blob/main/images/where%20is%20my%20shadow%20logo.jpg?raw=true" alt="Where Is My Shadow">
                         <h3>Where Is My Shadow</h3>
                     </div>
                     <div class="game-thumbnail" data-game="halfnhalf">
-                        <img src="/https://www.google.com/imgres?q=logo&imgurl=https%3A%2F%2Fcdn-assets-eu.frontify.com%2Fs3%2Ffrontify-enterprise-files-eu%2FeyJwYXRoIjoid2VhcmVcL2ZpbGVcLzZzZFZmY2ZLcmFUdFpiNnBzaEhBLnBuZyJ9%3Aweare%3Al1AVGN1zyMeJagbjjGMJITrKT8m6YVPkWYkqh28KEOM%3Fwidth%3D1200&imgrefurl=https%3A%2F%2Fwww.frontify.com%2Fen%2Fblog%2Fthe-best-logos-of-all-time-ever%2F&docid=dMP9XoKphf2PyM&tbnid=kMiVdbX7dvTHsM&vet=12ahUKEwjH6bKDn7iJAxWinK8BHchANu4QM3oECGQQAA..i&w=1200&h=1153&hcb=2&ved=2ahUKEwjH6bKDn7iJAxWinK8BHchANu4QM3oECGQQAA" alt="Half n Half">
+                        <img src="https://github.com/sanketrk08/auticare/blob/main/images/half%20n%20half%20logo.jpg?raw=true" alt="Half n Half">
                         <h3>Half n Half</h3>
                     </div>
                     <div class="game-thumbnail" data-game="match-animal">
